objects/Case.object
<CustomObject>
    <fields>
        <fullName>QA_Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_NAF__c</fullName>
        <label>Loan NAF</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QA_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Officer</label>
        <referenceTo>QA_Employee__c</referenceTo>
        <relationshipLabel>QA Cases</relationshipLabel>
        <relationshipName>QA_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Risk_Score__c</fullName>
        <formula>QA_Total_Unsatisfactory_Weighting__c / QA_Total_Weighting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Risk Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QA_Template__c</fullName>
        <globalPicklist>QA_Template</globalPicklist>
        <label>QA Template</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Total_Unsatisfactory_Weighting__c</fullName>
        <label>QA Total Unsatisfactory Weighting</label>
        <summarizedField>QA_Question__c.Weighting__c</summarizedField>
        <summaryFilterItems>
            <field>QA_Question__c.Answer__c</field>
            <operation>equals</operation>
            <value>Unsatisfactory</value>
        </summaryFilterItems>
        <summaryForeignKey>QA_Question__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QA_Total_Weighting__c</fullName>
        <description>The Sum of QA Questions Weighting</description>
        <label>QA Total Weighting</label>
        <summarizedField>QA_Question__c.Weighting__c</summarizedField>
        <summaryForeignKey>QA_Question__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QA_Unanswered_Questions__c</fullName>
        <label>QA Unanswered Questions</label>
        <summaryFilterItems>
            <field>QA_Question__c.Answer__c</field>
            <operation>equals</operation>
            <value>--None--</value>
        </summaryFilterItems>
        <summaryForeignKey>QA_Question__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reason_for_hardship__c</fullName>
        <label>Reason for hardship</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Disaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Breakdown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Reasons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Employment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <description>Release date when the case will get deployed to Production</description>
        <inlineHelpText>Date of deployment to  Production</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedByEmail__c</fullName>
        <label>Requested By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RootCauseCategory__c</fullName>
        <label>Root Cause Category</label>
        <picklist>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration (Salesforce)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code (Salesforce)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performace (Salesforce)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Access</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <formula>Property_Insurance__r.Risk_Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <label>Sub-category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Solicitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProCol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Experience / EDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk / Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure / IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrowers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAI Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrower solicitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitors(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field agent(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicing(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Experience / EDR(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk / Compliance(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure / IT(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjustments(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAF(U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrowers(U)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_sub_category__c</fullName>
        <label>Sub-sub-category</label>
        <picklist>
            <controllingField>Sub_category__c</controllingField>
            <picklistValues>
                <fullName>Default Notices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement of claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judgement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warrant of Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eviction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoices / Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex matters corro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructions acknowledgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eviction date confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockup report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFN service report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affidavit of service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal update request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exception approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fwd Corro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fwd external Corro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardship closure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemOriginate__c</fullName>
        <label>System (Originate)</label>
        <picklist>
            <picklistValues>
                <fullName>CAPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL Originate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocPath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DocuSign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawloop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RedMap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saleforce1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Inbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Magic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veda</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ThreadId__c</fullName>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCostOfChange__c</fullName>
        <label>Total Cost of Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_assistance__c</fullName>
        <label>Type of assistance</label>
        <picklist>
            <picklistValues>
                <fullName>Reduced Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pafss_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PAF Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pafss_Customer_Name__c</fullName>
        <formula>Account.FirstName&amp; &quot; &quot; &amp;Account.LastName</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepATP_Company_Name__c</fullName>
        <label>ATP Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepATP_Full_Name__c</fullName>
        <label>ATP Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepATP_password__c</fullName>
        <label>ATP password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepAccountFirstName__c</fullName>
        <formula>Account.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pepDueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pepEDRCaseNumber__c</fullName>
        <label>EDR Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pep_No_of_days_case_open__c</fullName>
        <formula>IF(ClosedDate &lt;&gt; null, ClosedDate - CreatedDate,  TODAY()- DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days case(open)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Accreditation_cases_to_be_setup_in_CMS</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CRM_Case_age_indicator__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.On_Boarding</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Setup in Progress</value>
        </filters>
        <filters>
            <field>CRM_System_logins_created__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Accreditation cases to be setup in CMS</label>
        <sharedTo>
            <group>All_Internal_Users_Except_Mortgage</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>All_Internal_Users_Except_Mortgage</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Accreditation_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Channel__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CRM_Case_age__c</columns>
        <columns>CRM_Case_age_indicator__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.On_Boarding</value>
        </filters>
        <label>All Closed Accreditation Cases</label>
        <sharedTo>
            <group>PAF_Accreditation_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_SF_Service_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>LineOfBusiness__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>ReleaseDate__c</columns>
        <columns>EstimatedInternalEffortHrs__c</columns>
        <columns>EstimatedExternalCost__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesforceCOE</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>includes</operation>
            <value>Collections,Customer Service</value>
        </filters>
        <filters>
            <field>CaseType__c</field>
            <operation>equals</operation>
            <value>Project Request,Service Request</value>
        </filters>
        <label>06 All Open SF Service Cases</label>
        <sharedTo>
            <group>SalesforceCOE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PAFSF_COE_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>LineOfBusiness__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>CaseType__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>RequestedByEmail__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>EstimatedInternalEffortHrs__c</columns>
        <columns>EstimatedExternalCost__c</columns>
        <columns>ReleaseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesforceCOE</value>
        </filters>
        <filters>
            <field>LineOfBusiness__c</field>
            <operation>includes</operation>
            <value>Pepper Asset Finance</value>
        </filters>
        <label>05 All PAF SF COE Cases</label>
        <sharedTo>
            <group>SalesforceCOE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SFCOE_Open_Production_Issues</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CRM_Case_age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesforceCOE</value>
        </filters>
        <filters>
            <field>CaseType__c</field>
            <operation>equals</operation>
            <value>Production Issue</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>07 All SFCOE Open Production Issues</label>
        <sharedTo>
            <group>SalesforceCOE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SF_COE_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>LineOfBusiness__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>CaseType__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>RequestedByEmail__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>EstimatedInternalEffortHrs__c</columns>
        <columns>EstimatedExternalCost__c</columns>
        <columns>ReleaseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.SalesforceCOE</value>
        </filters>
        <label>02 All SF COE Cases</label>
        <sharedTo>
            <group>SalesforceCOE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_All_Open_Accreditation_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Channel__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CRM_Case_age__c</columns>
        <columns>CRM_Case_age_indicator__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.On_Boarding</value>
        </filters>
        <label>All Open Accreditation Cases</label>
        <sharedTo>
            <group>PAF_Accreditation_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mortgage_Accreditation_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CRM_Mtg_Time_Elapsed__c</columns>
        <columns>CRM_Mtg_Time_Indicator__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CRM_Mortgage_Broker_Accreditation,Case.CRM_Mortgage_Broker_Transfer</value>
        </filters>
        <label>Mortgage Accreditation Queue</label>
        <queue>CRM_Mortgage_Accreditation_Queue</queue>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mortgage_Scenarios_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CRM_Mtg_Time_Elapsed__c</columns>
        <columns>CRM_Mtg_Time_Indicator__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CRM_Closed_Case_Reason__c</columns>
        <columns>CRM_Mtg_Case_Owner__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CRM_Mortgage_Broker_Scenario</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Mortgage Scenarios Queue</label>
        <queue>CRM_Mortgage_Scenarios_Queue</queue>
        <sharedTo>
            <group>CRM_Mortgage_Scenario_Executives</group>
            <group>CRM_Mortgage_Scenario_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Accreditation_Pending_QA</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CRM_Mtg_Type__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CRM_Mtg_QA_Verification__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CRM_Case_age__c</columns>
        <columns>CRM_Case_age_indicator__c</columns>
        <columns>CRM_Mtg_Verification_Completed_Date_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CRM_Mtg_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CRM_Mortgage_Broker_Accreditation,Case.CRM_Mortgage_Broker_Transfer</value>
        </filters>
        <filters>
            <field>CRM_Mtg_QA_Verification__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Verification_Completed_Date_Time__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>New,Verification In Progress</value>
        </filters>
        <label>All Accreditation Pending QA</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Closed_Accreditations</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CRM_Mtg_Type__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CRM_Case_age__c</columns>
        <columns>CRM_Case_age_indicator__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CRM_Closed_Case_Reason__c</columns>
        <columns>CRM_Mtg_Case_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CRM_Mortgage_Broker_Accreditation,Case.CRM_Mortgage_Broker_Transfer</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Accreditations</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
</CustomObject>